Added custom user action alerts
